--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>eu.els.sie.xml</groupId>
+	<groupId>eu.lefebvredalloz.xml</groupId>
 	<artifactId>xml-validator</artifactId>
 	<version>${revision}</version>
 	<packaging>jar</packaging>
