--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>eu.lefebvredalloz.xml</groupId>
+	<groupId>fr.lefebvredalloz.xml</groupId>
 	<artifactId>xml-validator</artifactId>
 	<version>${revision}</version>
 	<packaging>jar</packaging>
 
 	<properties>
-		<revision>1.00.00-SNAPSHOT</revision>
+		<revision>1.0.0-SNAPSHOT</revision>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<slf4j.version>1.7.36</slf4j.version>
